--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
     </header>
     <footer>
-        <button class="btn" onclick="myFunction()"> <!-- Button in the footer with a class and an onclick event -->
-            LET'S GO NEXT!
+        <button class="btn" onclick="myFunction()" > <!-- Button in the footer with a class and an onclick event -->
+             <a href="index1.html">LET'S GO NEXT!</a>
         </button>
         <div id="snackbar">We are presenting..</div> <!-- Div element for displaying a snackbar notification -->
     </footer>
